2004-11-04  Kees Cook  <kees@outflux.net>

	* src/dialogs/rdf.h, src/dialogs/rdf.cpp: added rdf:Bag for the
	  dc:subject keyword list.  Closed bug #1021025.

2004-11-04  MenTaLguY  <mental@rydia.net>

	* src/widgets/layer-selector.cpp: togglable images and formatting
	  changes (make current layer bold)

2004-11-03  MenTaLguY  <mental@rydia.net>

	* src/widgets/Makefile_insert, src/widgets/shrink-wrap-button.cpp,
	  src/widgets/shrink-wrap-button.h:

	  added Inkscape::Widgets::shrink_wrap_button, to make any gtk button
	  an SPButton-like shrink-wrapped button

	* src/widgets/layer-selector.h, src/widgets/layer-selector.cpp:

	  abandon SPButton for layer selector buttons

2004-11-03  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* po/check-markup: New script: detects <b>markup<b> <b>problems<7b>
	  in the <b>translated strings.  (~10 such problems found.)
	* Makefile.am (all, check, distcheck): Run po/check-markup (with
	  varying permissiveness of errors).

2004-11-02  MenTaLguY  <mental@rydia.net>

	* doc/keys.xml: added documentation of layer keys

2004-11-01  Kees Cook  <kees@outflux.net>

	* src/dialogs/align.cpp, src/dialogs/debugdialog.cpp: localized
	some missed strings.

2004-11-01  MenTaLguY  <mental@rydia.net>

	* share/icons/icons.svg: gave bulia's eye icons ids

	* src/widgets/layer-selector.h, src/widgets/layers-selector.cpp:
	  fixed up visibility/lock toggles... now to make them actually do
	  something

2004-10-31  MenTaLguY  <mental@rydia.net>

	* src/util/glib-list.h: adaptor for glib lists

	* src/widgets/layer-selector.h, src/widgets/layer-selector.cpp:
	  save the repr next to the SPObject

2004-10-30  MenTaLguY  <mental@rydia.net>

	* src/util/list.h: more list cleanups and documentation

	* src/verbs.cpp: call sp_document_done() for layer verbs too

2004-10-30  Bryce Harrington <bryce@bryceharrington.org>

	* src/dialogs/item-properties.cpp, src/sp-object.h:  Cleaning up